	libfreeipmi/include/freeipmi/templates/ipmi-messaging-support-cmds-templates.h,
	libfreeipmi/include/freeipmi/api/ipmi-messaging-support-cmds-api.h,
	libfreeipmi/cmds/ipmi-messaging-support-cmds.c,
	libfreeipmi/api/ipmi-messaging-support-cmds-api.c: Support new
	System Info Parameters Present OS Version Number, BMC URL, and
	Base OS/Hypervisor URL.

2013-10-30  Denys Vlasenko <dvlasenk@redhat.com>

	* libfreeipmi/util/ipmi-rmcpplus-util.c (ipmi_rmcpplus_check_rakp_4_integrity_check_value):
	Fix incorrect secure memset call.
	
2013-10-23  Denys Vlasenko <dvlasenk@redhat.com>

	* libfreeipmi/util/ipmi-rmcpplus-util.c (ipmi_calculate_sik): Fix
	big endian bug.
	
2013-09-24  Albert Chu <chu11@llnl.gov>

	* man/ipmi-sel.8.pre.in: Add note about very verbose output.
	
2013-09-23  Albert Chu <chu11@llnl.gov>
	
	* libfreeipmi/sel/ipmi-sel-string.c (_output_oem_record_data):
	Output record type under verbose mode.
	(Feature recommended by Rob Swindell - swindell at broadcom dot
	com).

2013-09-18  Albert Chu <chu11@llnl.gov>

	Merge branch intelnm20 ; Add support for Intel Node Manager 2.0.

	* libfreeipmi/sel/ipmi-sel-string-intel-node-manager.c: Support
	changes to Intel NM 2.0 events and add new Intel NM 2.0 events.

	* libfreeipmi/include/freeipmi/spec/ipmi-sensor-and-event-code-tables-oem-spec.h,
	libfreeipmi/include/freeipmi/spec/ipmi-event-reading-type-code-oem-spec.h,
	libfreeipmi/include/freeipmi/spec/ipmi-sensor-numbers-oem-spec.h,
	libfreeipmi/include/freeipmi/spec/ipmi-sensor-types-oem-spec.h,
	libfreeipmi/include/freeipmi/cmds/ipmi-oem-intel-node-manager-cmds.h,
	libfreeipmi/include/freeipmi/api/ipmi-oem-intel-node-manager-cmds-api.h,
	libfreeipmi/include/freeipmi/templates/ipmi-oem-intel-node-manager-cmds-templates.h
	libfreeipmi/include/freeipmi/spec/ipmi-cmd-oem-spec.h,
	libfreeipmi/include/freeipmi/spec/ipmi-comp-code-oem-spec.h:
	Update with changes and/or additions from Intel NM 2.0 spec.
